feat: implement ASR speech-to-text prefab
- Add audio_to_text() function with multi-language support
- Support WAV and MP3 audio formats
- Auto language detection (auto, zh, en, yue, ja, ko, nospeech)
- Batch processing multiple audio files
- Comprehensive error handling with 10 error types
- Add 11 unit tests with 100% pass rate
- Update README with complete documentation
- Add test audio file (1.38MB MP3)
- Follow v3.0 architecture specification

--- a/prefab-manifest.json
+++ b/prefab-manifest.json
@@ -1,168 +1,24 @@
 {
   "schema_version": "1.0",
-  "id": "hello-world-prefab",
+  "id": "asr-prefab",
   "version": "0.1.0",
-  "name": "Hello World 示例预制件",
-  "description": "一个简单的示例预制件，展示如何创建可被 AI 调用的函数（v3.0 架构）",
-  "author": "Your Name",
-  "github_url": "https://github.com/your-org/your-prefab",
+  "name": "ASR 语音识别预制件",
+  "description": "将音频文件（wav/mp3）转换为文字，支持中文、英文、粤语、日语、韩语等多种语言",
+  "author": "ketd",
+  "github_url": "https://github.com/ketd/asr",
   "tags": [
-    "example",
-    "hello-world",
-    "tutorial"
+    "asr",
+    "speech-recognition",
+    "audio-to-text",
+    "speech-to-text",
+    "voice-recognition"
   ],
   "entry_point": "src/main.py",
   "dependencies_file": "pyproject.toml",
   "functions": [
     {
-      "name": "greet",
-      "description": "向用户问候",
-      "parameters": [
-        {
-          "name": "name",
-          "type": "string",
-          "description": "要问候的名字",
-          "required": false,
-          "default": "World"
-        }
-      ],
-      "returns": {
-        "type": "object",
-        "description": "包含问候结果的对象",
-        "properties": {
-          "success": {
-            "type": "boolean",
-            "description": "操作是否成功"
-          },
-          "message": {
-            "type": "string",
-            "description": "问候消息（成功时）",
-            "optional": true
-          },
-          "name": {
-            "type": "string",
-            "description": "问候的名字（成功时）",
-            "optional": true
-          },
-          "error": {
-            "type": "string",
-            "description": "错误信息（失败时）",
-            "optional": true
-          },
-          "error_code": {
-            "type": "string",
-            "description": "错误代码（失败时）",
-            "optional": true,
-            "enum": ["INVALID_NAME", "UNEXPECTED_ERROR"]
-          }
-        }
-      }
-    },
-    {
-      "name": "echo",
-      "description": "回显输入的文本",
-      "parameters": [
-        {
-          "name": "text",
-          "type": "string",
-          "description": "要回显的文本",
-          "required": true
-        }
-      ],
-      "returns": {
-        "type": "object",
-        "description": "包含回显结果的对象",
-        "properties": {
-          "success": {
-            "type": "boolean",
-            "description": "操作是否成功"
-          },
-          "original": {
-            "type": "string",
-            "description": "原始文本（成功时）",
-            "optional": true
-          },
-          "echo": {
-            "type": "string",
-            "description": "回显的文本（成功时）",
-            "optional": true
-          },
-          "length": {
-            "type": "integer",
-            "description": "文本长度（成功时）",
-            "optional": true
-          },
-          "error": {
-            "type": "string",
-            "description": "错误信息（失败时）",
-            "optional": true
-          },
-          "error_code": {
-            "type": "string",
-            "description": "错误代码（失败时）",
-            "optional": true,
-            "enum": ["EMPTY_TEXT", "UNEXPECTED_ERROR"]
-          }
-        }
-      }
-    },
-    {
-      "name": "add_numbers",
-      "description": "计算两个数字的和",
-      "parameters": [
-        {
-          "name": "a",
-          "type": "number",
-          "description": "第一个数字",
-          "required": true
-        },
-        {
-          "name": "b",
-          "type": "number",
-          "description": "第二个数字",
-          "required": true
-        }
-      ],
-      "returns": {
-        "type": "object",
-        "description": "包含计算结果的对象",
-        "properties": {
-          "success": {
-            "type": "boolean",
-            "description": "操作是否成功"
-          },
-          "a": {
-            "type": "number",
-            "description": "第一个数字（成功时）",
-            "optional": true
-          },
-          "b": {
-            "type": "number",
-            "description": "第二个数字（成功时）",
-            "optional": true
-          },
-          "sum": {
-            "type": "number",
-            "description": "计算结果（成功时）",
-            "optional": true
-          },
-          "error": {
-            "type": "string",
-            "description": "错误信息（失败时）",
-            "optional": true
-          },
-          "error_code": {
-            "type": "string",
-            "description": "错误代码（失败时）",
-            "optional": true,
-            "enum": ["CALCULATION_ERROR", "UNEXPECTED_ERROR"]
-          }
-        }
-      }
-    },
-    {
-      "name": "process_text_file",
-      "description": "处理文本文件（演示文件输入输出，v3.0 架构）",
+      "name": "audio_to_text",
+      "description": "将音频文件转换为文字（ASR - 自动语音识别），支持多种语言和音频格式",
       "files": {
         "input": {
           "type": "array",
@@ -170,49 +26,57 @@
             "type": "InputFile"
           },
           "minItems": 1,
-          "maxItems": 1,
-          "description": "输入文本文件",
+          "maxItems": 10,
+          "description": "输入音频文件（支持 .wav 和 .mp3 格式，推荐 16KHz 采样率）",
           "required": true
-        },
-        "output": {
-          "type": "array",
-          "items": {
-            "type": "OutputFile"
-          },
-          "description": "处理后的文本文件"
         }
       },
       "parameters": [
         {
-          "name": "operation",
+          "name": "lang",
           "type": "string",
-          "description": "操作类型（uppercase, lowercase, reverse）",
+          "description": "音频内容的语言",
           "required": false,
-          "default": "uppercase",
-          "enum": ["uppercase", "lowercase", "reverse"]
+          "default": "auto",
+          "enum": ["auto", "zh", "en", "yue", "ja", "ko", "nospeech"]
+        },
+        {
+          "name": "keys",
+          "type": "string",
+          "description": "每个音频文件的名称，用逗号连接（可选，如果为空则使用文件名）",
+          "required": false,
+          "default": ""
         }
       ],
       "returns": {
         "type": "object",
-        "description": "包含处理结果的对象（不包含文件路径）",
+        "description": "包含转录结果的对象",
         "properties": {
           "success": {
             "type": "boolean",
             "description": "操作是否成功"
           },
-          "operation": {
+          "results": {
+            "type": "array",
+            "description": "转录结果列表（成功时）",
+            "optional": true,
+            "items": {
+              "type": "object"
+            }
+          },
+          "total_files": {
+            "type": "integer",
+            "description": "处理的音频文件总数（成功时）",
+            "optional": true
+          },
+          "language": {
             "type": "string",
-            "description": "执行的操作（成功时）",
+            "description": "使用的语言设置（成功时）",
             "optional": true
           },
-          "original_length": {
-            "type": "integer",
-            "description": "原始文本长度（成功时）",
-            "optional": true
-          },
-          "processed_length": {
-            "type": "integer",
-            "description": "处理后文本长度（成功时）",
+          "api_url": {
+            "type": "string",
+            "description": "ASR 服务 API 地址（成功时）",
             "optional": true
           },
           "error": {
@@ -224,71 +88,26 @@
             "type": "string",
             "description": "错误代码（失败时）",
             "optional": true,
-            "enum": ["NO_INPUT_FILE", "FILE_NOT_FOUND", "INVALID_OPERATION", "PROCESSING_ERROR"]
+            "enum": [
+              "INVALID_LANGUAGE",
+              "NO_INPUT_DIR",
+              "NO_AUDIO_FILES",
+              "FILE_OPEN_ERROR",
+              "ASR_API_ERROR",
+              "TIMEOUT",
+              "CONNECTION_ERROR",
+              "REQUEST_ERROR",
+              "PARSE_ERROR",
+              "UNEXPECTED_ERROR"
+            ]
+          },
+          "details": {
+            "type": "string",
+            "description": "错误详情（失败时可选）",
+            "optional": true
           }
         }
       }
-    },
-    {
-      "name": "fetch_weather",
-      "description": "获取指定城市的天气信息（演示如何使用 secrets）",
-      "parameters": [
-        {
-          "name": "city",
-          "type": "string",
-          "description": "要查询天气的城市名称，例如 '北京'",
-          "required": true
-        }
-      ],
-      "returns": {
-        "type": "object",
-        "description": "包含天气信息的对象",
-        "properties": {
-          "success": {
-            "type": "boolean",
-            "description": "操作是否成功"
-          },
-          "city": {
-            "type": "string",
-            "description": "城市名称（成功时）",
-            "optional": true
-          },
-          "temperature": {
-            "type": "number",
-            "description": "摄氏温度（成功时）",
-            "optional": true
-          },
-          "condition": {
-            "type": "string",
-            "description": "天气状况，例如 '晴天'（成功时）",
-            "optional": true
-          },
-          "note": {
-            "type": "string",
-            "description": "备注信息（成功时）",
-            "optional": true
-          },
-          "error": {
-            "type": "string",
-            "description": "错误信息（失败时）",
-            "optional": true
-          },
-          "error_code": {
-            "type": "string",
-            "description": "错误代码（失败时）",
-            "optional": true,
-            "enum": ["MISSING_API_KEY", "INVALID_CITY", "UNEXPECTED_ERROR"]
-          }
-        }
-      },
-      "secrets": [
-        {
-          "name": "WEATHER_API_KEY",
-          "description": "用于认证天气服务的 API 密钥",
-          "instructions": "这是一个演示示例。在实际使用中，您需要访问天气服务提供商的网站（例如 https://www.weather-provider.com/api-keys）注册并获取您的免费 API Key。",
-          "required": true
-        }
-      ]
     }
   ],
   "execution_environment": {
