--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
-name = "hello-world-prefab"
+name = "asr-prefab"
 version = "0.1.0"
-description = "一个简单的 Hello World 示例预制件，展示如何创建可被 AI 调用的函数"
+description = "ASR (自动语音识别) 预制件，支持将音频文件转换为文字"
 readme = "README.md"
 requires-python = ">=3.11"
 license = { text = "MIT" }
 authors = [
     { name = "Your Name", email = "your.email@example.com" }
 ]
-keywords = ["ai", "prefab", "template", "hello-world", "example"]
+keywords = ["ai", "prefab", "asr", "speech-recognition", "audio-to-text"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -19,8 +19,9 @@ classifiers = [
 ]
 
 # 运行时依赖（会被打包到最终产物中）
-# 这个示例预制件不需要额外的依赖
-dependencies = []
+dependencies = [
+    "requests>=2.31.0",
+]
 
 [project.optional-dependencies]
 # 开发和测试依赖（不会被打包）
