--- a/prefab-manifest.json
+++ b/prefab-manifest.json
@@ -18,7 +18,7 @@
   "functions": [
     {
       "name": "audio_to_text",
-      "description": "将音频文件转换为文字（ASR - 自动语音识别），支持多种语言和音频格式",
+      "description": "将音频文件转换为文字（ASR - 自动语音识别），支持多种语言和音频格式，一次处理一个文件",
       "files": {
         "input": {
           "type": "array",
@@ -26,8 +26,8 @@
             "type": "InputFile"
           },
           "minItems": 1,
-          "maxItems": 10,
-          "description": "输入音频文件（支持 .wav 和 .mp3 格式，推荐 16KHz 采样率）",
+          "maxItems": 1,
+          "description": "输入音频文件（支持 .wav 和 .mp3 格式，推荐 16KHz 采样率，一次只能上传1个文件）",
           "required": true
         }
       },
@@ -39,34 +39,20 @@
           "required": false,
           "default": "auto",
           "enum": ["auto", "zh", "en", "yue", "ja", "ko", "nospeech"]
-        },
-        {
-          "name": "keys",
-          "type": "string",
-          "description": "每个音频文件的名称，用逗号连接（可选，如果为空则使用文件名）",
-          "required": false,
-          "default": ""
         }
       ],
       "returns": {
         "type": "object",
-        "description": "包含转录结果的对象",
+        "description": "转录结果或错误信息",
         "properties": {
-          "success": {
-            "type": "boolean",
-            "description": "操作是否成功"
+          "text": {
+            "type": "string",
+            "description": "转录的文本内容（成功时）",
+            "optional": true
           },
-          "results": {
-            "type": "array",
-            "description": "转录结果列表（成功时）",
-            "optional": true,
-            "items": {
-              "type": "object"
-            }
-          },
-          "total_files": {
-            "type": "integer",
-            "description": "处理的音频文件总数（成功时）",
+          "filename": {
+            "type": "string",
+            "description": "处理的文件名（成功时）",
             "optional": true
           },
           "language": {
@@ -74,37 +60,42 @@
             "description": "使用的语言设置（成功时）",
             "optional": true
           },
-          "api_url": {
+          "raw_text": {
             "type": "string",
-            "description": "ASR 服务 API 地址（成功时）",
+            "description": "原始文本（包含标记，成功时可选）",
+            "optional": true
+          },
+          "clean_text": {
+            "type": "string",
+            "description": "清理后的文本（成功时可选）",
             "optional": true
           },
           "error": {
-            "type": "string",
+            "type": "object",
             "description": "错误信息（失败时）",
-            "optional": true
-          },
-          "error_code": {
-            "type": "string",
-            "description": "错误代码（失败时）",
             "optional": true,
-            "enum": [
-              "INVALID_LANGUAGE",
-              "NO_INPUT_DIR",
-              "NO_AUDIO_FILES",
-              "FILE_OPEN_ERROR",
-              "ASR_API_ERROR",
-              "TIMEOUT",
-              "CONNECTION_ERROR",
-              "REQUEST_ERROR",
-              "PARSE_ERROR",
-              "UNEXPECTED_ERROR"
-            ]
-          },
-          "details": {
-            "type": "string",
-            "description": "错误详情（失败时可选）",
-            "optional": true
+            "properties": {
+              "message": {
+                "type": "string",
+                "description": "错误描述"
+              },
+              "code": {
+                "type": "string",
+                "description": "错误代码",
+                "enum": [
+                  "INVALID_LANGUAGE",
+                  "NO_INPUT_DIR",
+                  "NO_AUDIO_FILES",
+                  "FILE_ERROR",
+                  "ASR_API_ERROR",
+                  "TIMEOUT",
+                  "CONNECTION_ERROR",
+                  "REQUEST_ERROR",
+                  "PARSE_ERROR",
+                  "UNEXPECTED_ERROR"
+                ]
+              }
+            }
           }
         }
       }
